# xoreos-tools

./: CMakeLists.txt
src/: Makefile.am  xoreos-cli.cpp
